nsd.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nagdev
  labels:
    name: development
