nsp.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nagprd
  labels:
    name: production
