pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nagpod
  labels:
    nam: nagpod
spec:
  containers:
   - name: samplepod
     image: tomcat:8
     volumeMounts:
      - name: nagv
        mountPath: /apps
     ports:
      - containerPort: 8080
        name: "http-server"
  volumes:
   - name: nagv
     persistentVolumeClaim:
       claimName: myclaim
