samplepod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nagsamplepod
spec:
  containers:
   - name: nagsamplepod
     image: nginx
     volumeMounts:
       - name: nagvolume
         mountPath: /apps
  volumes:
   - name: nagvolume
     emptyDir: {}
