svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector: 
    app: web
  type: NodePort
  ports:
   - protocol: TCP
     port: 80
     targetPort: 8080
